new grid structure

--- a/app/index.jade
+++ b/app/index.jade
@@ -53,54 +53,98 @@ html(lang="zh-tw")
         #ss-container.ss-container
       .container#page_2
         #info
-        .ui.eight.column.divided.grid
-          #sideinfo
-            .img
-              img.ui.image(src="/res/images/profile/2.jpg")
-          .row#row_1
-            .column.ih-item.square
-            .column.ih-item.square
-            .column.ih-item.square#col3
-              .name.name-top PIGGY
+        .ui.vertically.celled.grid
+          .row
+            .four.wide.column
               .img
                 img.ui.image(src="/res/images/profile/2.jpg")
-            .column.ih-item.square.effect6.bottom_to_top#col5  
-              .img
-                img.ui.image(src="/res/images/profile/3.jpg")
-            .column.ih-item.square.effect6.bottom_to_top#col7 
-              .img
-                img.ui.image(src="/res/images/profile/4.jpg")
-            .column.ih-item.square.effect6.bottom_to_top#col9 
-              .img
-                img.ui.image(src="/res/images/profile/5.jpg")
-            .column.ih-item.square.effect6.bottom_to_top#col11 
-              .img
-                img.ui.image(src="/res/images/profile/6.jpg")
-            .column.ih-item.square.effect6.bottom_to_top#col13 
-              .img
-                img.ui.image(src="/res/images/profile/7.jpg")
-          .row#row_2
-            .column.ih-item.square
-            .column.ih-item.square
-            .column.ih-item.square.effect6.top_to_bottom#col2 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
-              .name.name-bottom PIGGY
-            .column.ih-item.square.effect6.top_to_bottom#col4 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
-            .column.ih-item.square.effect6.top_to_bottom#col6 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
-            .column.ih-item.square.effect6.top_to_bottom#col8 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
-            .column.ih-item.square.effect6.top_to_bottom#col10 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
-            .column.ih-item.square.effect6.top_to_bottom#col12 
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
+            .twelve.wide.column.ui.vertically.celled.grid
+              .row
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+              .row
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+                .two.wide.column
+                  .img
+                    img.ui.image(src="/res/images/profile/2.jpg")
+          
+        //  #sideinfo.column.wide
+        //    .img
+        //      img.ui.image(src="/res/images/profile/2.jpg")
+        //  .row#row_1
+        //    .column.ih-item.square
+        //    .column.ih-item.square
+        //    .column.ih-item.square#col3
+        //      .name.name-top PIGGY
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //    .column.ih-item.square.effect6.bottom_to_top#col5  
+        //      .img
+        //        img.ui.image(src="/res/images/profile/3.jpg")
+        //    .column.ih-item.square.effect6.bottom_to_top#col7 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/4.jpg")
+        //    .column.ih-item.square.effect6.bottom_to_top#col9 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/5.jpg")
+        //    .column.ih-item.square.effect6.bottom_to_top#col11 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/6.jpg")
+        //    .column.ih-item.square.effect6.bottom_to_top#col13 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/7.jpg")
+        //  .row#row_2
+        //    .column.ih-item.square
+        //    .column.ih-item.square
+        //    .column.ih-item.square.effect6.top_to_bottom#col2 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //      .name.name-bottom PIGGY
+        //    .column.ih-item.square.effect6.top_to_bottom#col4 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //    .column.ih-item.square.effect6.top_to_bottom#col6 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //    .column.ih-item.square.effect6.top_to_bottom#col8 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //    .column.ih-item.square.effect6.top_to_bottom#col10 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
+        //    .column.ih-item.square.effect6.top_to_bottom#col12 
+        //      .img
+        //        img.ui.image(src="/res/images/profile/2.jpg")
 
       .container#page_3
         br 
