--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -52,6 +52,72 @@ html
   margin-top 0
   padding 0 0 0 0
 
+#profile-container
+  margin-top 10vh
+
+#row-2 .column
+  padding 0px
+  vertical-align middle
+  #row-2-1 .column
+    padding 0px 1px 1px 1px
+    vertical-align top
+    .img
+      border-top #0000FF 5px solid
+  #row-2-2 .column
+    padding 1px 1px 0px 1px
+    // vertical-align bottom
+    .img
+      border-bottom #0000FF 5px solid
+
+#row-1 .column
+  padding 0px
+  text-align center
+  p
+    height 1.5rem
+    line-height 1.5rem
+
+#row-1 .column.two.wide
+  padding 1px 1px 0px 1px
+  text-align center
+
+#row-3 .column
+  padding 0px
+  text-align center
+  p
+    height 1.5rem
+    line-height 1.5rem
+
+#row-3 .column.two.wide
+  padding 0px 1px 1px 1px
+  text-align center
+
+#cur-profile 
+  position relative
+  overflow-y hidden
+  .name
+    position absolute
+    z-index 2
+    right 0px
+    bottom 0px
+    margin 5%
+    font-size 3rem
+    font-weight bolder
+    text-shadow 0px 0px 35px #000
+    letter-spacing 1rem
+    color #FFF
+    -webkit-writing-mode vertical-lr
+  .office
+    position absolute
+    z-index 2
+    right 4rem
+    bottom 0px
+    margin 5%
+    font-size 2rem
+    font-weight bold
+    letter-spacing 1rem
+    color #FFF
+    -webkit-writing-mode vertical-lr
+
 #sideinfo
   position absolute
   background-color red
@@ -67,48 +133,48 @@ html
 
 img
   display inline
-  box-shadow 0px 0px 9px 0px rgba(20%,20%,40%,0.5)
+  // box-shadow 0px 0px 9px 0px rgba(20%,20%,40%,0.5)
   width 100%
   height 100%
 
-#row_1 .column img
-  margin-top 0%
-
-#row_1 .column
-  padding 3px
-  
-#row_2 .column img
-  margin-bottom 0%
-  
-#row_2 .column
-  padding 3px
-
-#row_1
-  bottom 45vh
-
-#row_2
-  top 55vh
-
-#row_2
-  display table
-  bottom 0px
-
-#row_1, #row_2
-  position absolute
-
-.name
-  position relative 
-  width 100%
-  height auto
-  text-align center
-
-.name-top
-  border-bottom #0000FF 5px solid
-  padding-bottom 5px
-
-.name-bottom
-  border-top #0000FF 5px solid
-  padding-top 5px
+//#row_1 .column img
+//  margin-top 0%
+//
+//#row_1 .column
+//  padding 3px
+//  
+//#row_2 .column img
+//  margin-bottom 0%
+//  
+//#row_2 .column
+//  padding 3px
+//
+//#row_1
+//  bottom 45vh
+//
+//#row_2
+//  top 55vh
+//
+//#row_2
+//  display table
+//  bottom 0px
+//
+//#row_1, #row_2
+//  position absolute
+//
+//.name
+//  position relative 
+//  width 100%
+//  height auto
+//  text-align center
+//
+//.name-top
+//  border-bottom #0000FF 5px solid
+//  padding-bottom 5px
+//
+//.name-bottom
+//  border-top #0000FF 5px solid
+//  padding-top 5px
 
 #fb
   right 20%
