--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -55,6 +55,9 @@ html
 #profile-container
   margin-top 10vh
 
+#row-2
+  position relative
+
 #row-2 .column
   padding 0px
   vertical-align middle
@@ -62,12 +65,12 @@ html
     padding 0px 1px 1px 1px
     vertical-align top
     .img
-      border-top #0000FF 5px solid
+      border-top #0000FF 7px solid
   #row-2-2 .column
     padding 1px 1px 0px 1px
     // vertical-align bottom
     .img
-      border-bottom #0000FF 5px solid
+      border-bottom #0000FF 7px solid
 
 #row-1 .column
   padding 0px
@@ -90,6 +93,12 @@ html
 #row-3 .column.two.wide
   padding 0px 1px 1px 1px
   text-align center
+
+#profile-content
+  position absolute
+  height 10%
+  top 100px
+  background-color red
 
 #cur-profile 
   position relative
