--- a/app/index.jade
+++ b/app/index.jade
@@ -73,6 +73,7 @@ html(lang="zh-tw")
                 | 會長
               .img
                 img.ui.image(src="/res/images/profile/2.jpg")
+            #profile-content.twelve.wide.column
             .twelve.wide.column.ui.vertically.celled.grid
               .row#row-2-1
                 .two.wide.column
