done change profile

--- a/app/index.jade
+++ b/app/index.jade
@@ -71,48 +71,48 @@ html(lang="zh-tw")
                 | 李念庭
               .office
                 | 會長
-              .img
-                img.ui.image(src="/res/images/profile/2.jpg")
+              .img#profile-0
+                img.ui.image#pic-1(src="/res/images/profile/1.jpg")
             #profile-content.twelve.wide.column
             .twelve.wide.column.ui.vertically.celled.grid
               .row#row-2-1
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-1
+                    img.ui.image#pic-2(src="/res/images/profile/2.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-3
+                    img.ui.image#pic-3(src="/res/images/profile/3.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-5
+                    img.ui.image#pic-4(src="/res/images/profile/4.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-7
+                    img.ui.image#pic-5(src="/res/images/profile/5.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-9
+                    img.ui.image#pic-6(src="/res/images/profile/6.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-11
+                    img.ui.image#pic-7(src="/res/images/profile/7.jpg")
               .row#row-2-2
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-2
+                    img.ui.image#pic(src="/res/images/profile/8.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-4
+                    img.ui.image#pic(src="/res/images/profile/9.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-6
+                    img.ui.image#pic(src="/res/images/profile/10.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-8
+                    img.ui.image#pic(src="/res/images/profile/11.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-10
+                    img.ui.image#pic(src="/res/images/profile/12.jpg")
                 .two.wide.column
-                  .img
-                    img.ui.image(src="/res/images/profile/2.jpg")
+                  .img#profile-12
+                    img.ui.image#pic(src="/res/images/profile/13.jpg")
           .row#row-3
            .four.wide.column
            .twelve.wide.column.ui.celled.grid
