done profile name change

--- a/app/index.jade
+++ b/app/index.jade
@@ -97,22 +97,22 @@ html(lang="zh-tw")
               .row#row-2-2
                 .two.wide.column
                   .img#profile-2
-                    img.ui.image#pic(src="/res/images/profile/8.jpg")
+                    img.ui.image#pic-8(src="/res/images/profile/8.jpg")
                 .two.wide.column
                   .img#profile-4
-                    img.ui.image#pic(src="/res/images/profile/9.jpg")
+                    img.ui.image#pic-9(src="/res/images/profile/9.jpg")
                 .two.wide.column
                   .img#profile-6
-                    img.ui.image#pic(src="/res/images/profile/10.jpg")
+                    img.ui.image#pic-10(src="/res/images/profile/10.jpg")
                 .two.wide.column
                   .img#profile-8
-                    img.ui.image#pic(src="/res/images/profile/11.jpg")
+                    img.ui.image#pic-11(src="/res/images/profile/11.jpg")
                 .two.wide.column
                   .img#profile-10
-                    img.ui.image#pic(src="/res/images/profile/12.jpg")
+                    img.ui.image#pic-12(src="/res/images/profile/12.jpg")
                 .two.wide.column
                   .img#profile-12
-                    img.ui.image#pic(src="/res/images/profile/13.jpg")
+                    img.ui.image#pic-13(src="/res/images/profile/13.jpg")
           .row#row-3
            .four.wide.column
            .twelve.wide.column.ui.celled.grid
