done profile color

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -65,12 +65,12 @@ html
     padding 0px 1px 1px 1px
     vertical-align top
     .img
-      border-top #0000FF 7px solid
+      border-top #FFF 7px solid
   #row-2-2 .column
     padding 1px 1px 0px 1px
     // vertical-align bottom
     .img
-      border-bottom #0000FF 7px solid
+      border-bottom #FFF 7px solid
 
 #row-1 .column
   padding 0px
