done name color

--- a/app/index.jade
+++ b/app/index.jade
@@ -58,13 +58,18 @@ html(lang="zh-tw")
             .four.wide.column
             .twelve.wide.column.ui.celled.grid
               .row
-                .two.wide.column
-                  p 我好正
-                .two.wide.column
-                .two.wide.column
-                .two.wide.column
-                .two.wide.column
-                .two.wide.column
+                .two.wide.column#name-1
+                  p
+                .two.wide.column#name-3
+                  p
+                .two.wide.column#name-5
+                  p
+                .two.wide.column#name-7
+                  p
+                .two.wide.column#name-9
+                  p
+                .two.wide.column#name-11
+                  p
           .row#row-2
             .four.wide.column#cur-profile
               .name
@@ -114,16 +119,21 @@ html(lang="zh-tw")
                   .img#profile-12
                     img.ui.image#pic-13(src="/res/images/profile/13.jpg")
           .row#row-3
-           .four.wide.column
-           .twelve.wide.column.ui.celled.grid
-             .row
-               .two.wide.column
-                 p 我好正
-               .two.wide.column
-               .two.wide.column
-               .two.wide.column
-               .two.wide.column
-               .two.wide.column
+            .four.wide.column
+            .twelve.wide.column.ui.celled.grid
+              .row
+                .two.wide.column#name-2
+                  p
+                .two.wide.column#name-4
+                  p
+                .two.wide.column#name-6
+                  p
+                .two.wide.column#name-8
+                  p
+                .two.wide.column#name-10
+                  p
+                .two.wide.column#name-12
+                  p
          
         //-  #sideinfo.column.wide
         //-    .img
