--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -1,4 +1,4 @@
-*, h1, h2, h3
+*, h1, h2, h3, p
   font-family "微軟正黑體"
 
 html
@@ -78,6 +78,9 @@ html
   p
     height 1.5rem
     line-height 1.5rem
+    letter-spacing 1rem
+    font-size 1.3rem
+    font-weight bolder
 
 #row-1 .column.two.wide
   padding 1px 1px 0px 1px
@@ -89,6 +92,9 @@ html
   p
     height 1.5rem
     line-height 1.5rem
+    letter-spacing 1rem
+    font-size 1.3rem
+    font-weight bolder
 
 #row-3 .column.two.wide
   padding 0px 1px 1px 1px
