--- a/app/index.jade
+++ b/app/index.jade
@@ -79,6 +79,8 @@ html(lang="zh-tw")
               .img#profile-0
                 img.ui.image#pic-1(src="/res/images/profile/1.jpg")
             #profile-content.twelve.wide.column
+              #experience
+              #say
             .twelve.wide.column.ui.vertically.celled.grid
               .row#row-2-1
                 .two.wide.column
