--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -1,5 +1,9 @@
+@font-face
+  font-family "王漢宗細圓體"
+  src url(/res/fonts/wt006.ttf)
+
 *, h1, h2, h3, p
-  font-family "微軟正黑體"
+  font-family "王漢宗細圓體", "微軟正黑體", "sans-serif", "Arial"
 
 html
   overflow-x hidden
