fix name office position

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -167,24 +167,23 @@ html
   .name
     position absolute
     z-index 2
-    right 0px
-    bottom 0px
+    left 4rem
+    top 0px
     margin 5%
     font-size 3rem
     font-weight bolder
-    text-shadow 0px 0px 35px #000
-    letter-spacing 1rem
+    letter-spacing 0.5rem
     color #FFF
     -webkit-writing-mode vertical-lr
   .office
     position absolute
     z-index 2
-    right 4rem
-    bottom 0px
+    left 0px
+    top 0px
     margin 5%
     font-size 2rem
     font-weight bold
-    letter-spacing 1rem
+    letter-spacing 0.5rem
     color #FFF
     -webkit-writing-mode vertical-lr
 
