--- a/app/index.jade
+++ b/app/index.jade
@@ -7,7 +7,7 @@ html(lang="zh-tw")
     meta(name="description", content="1")
     meta(name="keywords", content=" ")
     meta(name="author", content="Mouther")
-    link(rel="shortcut icon", href="../favicon.ico") 
+    link(rel="shortcut icon", href="/res/images/favicon.png") 
     link(rel="stylesheet", type="text/css", href="app.css")
     //- link(href='http://fonts.googleapis.com/css?family=Kelly+Slab', rel='stylesheet', type='text/css')
     //- <!--[if lt IE 9]>  <link rel="stylesheet" type="text/css" href="css/styleIE.css" /> <![endif]-->
