--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -146,6 +146,7 @@ html
   max-height 100%
   margin auto 0
   padding-left 8%
+  padding-top 2%
   h2
     font-size 1.5rem
   h3
@@ -155,11 +156,14 @@ html
 #say
   flex 4
   line-height 1.5rem
+  font-size 1.2rem
   margin auto 0
   height auto
   width auto
   padding-left 7px
-  padding-right 10px
+  padding-right 5vw
+  padding-top 2%
+  font-family "王漢宗粗明體"
   .sign
     margin-top 5%
     h2
@@ -177,7 +181,7 @@ html
   .name
     position absolute
     z-index 2
-    left 3rem
+    left 2.5rem
     top 0px
     margin 5%
     font-size 3rem
@@ -270,6 +274,14 @@ img
 #contact
   width 90vw
   margin 0 auto
+  .message
+    background-color #C30D23
+    #header
+      text-align center
+      h2, p
+        color #FFF
+      h2
+        padding-bottom 5px
 
 p#contact-sub
   margin-top 0
