--- a/app/index.jade
+++ b/app/index.jade
@@ -193,8 +193,8 @@ html(lang="zh-tw")
         br
         br
         #contact
-          .ui.attached.message.blue
-            .haeder
+          .ui.attached.message
+            #header
               h2 聯絡我們
               p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
           form.ui.form.attached.fluid.segment
