reduse color line height

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -9,10 +9,13 @@
 *, h1, h2, h3, p
   font-family "王漢宗細圓體", "微軟正黑體", "sans-serif", "Arial"
 
+input, textarea
+  font-family "微軟正黑體"!important
+
 html
   overflow-x hidden
   max-width 100%
-  font-size 2.5vmin
+  font-size 2.2vmin
 
 #menu
   position fixed
@@ -77,7 +80,7 @@ html
     vertical-align top
     .img
       cursor pointer
-      border-top #FFF 7px solid
+      border-top #FFF 4px solid
       transition opacity .3s ease-in-out
     .img:hover
       opacity 0.4
@@ -86,8 +89,8 @@ html
     // vertical-align bottom
     .img
       cursor pointer
-      border-bottom #FFF 7px solid
-      transition opacity .4s ease-in-out
+      border-bottom #FFF 4px solid
+      transition opacity .3s ease-in-out
     .img:hover
       opacity 0.4
 
@@ -135,7 +138,7 @@ html
   position absolute
   display flex
   height 100%
-  top 6px
+  top 4px
   background-color rgba(255, 255, 255, 0)
   z-index -4
   overflow-y auto
