--- a/app/index.jade
+++ b/app/index.jade
@@ -213,8 +213,8 @@ html(lang="zh-tw")
               input#email(placeholder="E-mail address" type="text")
             .ui.field.large.input
               label 
-                h3(style="font-weight:bold") Comment
-              textarea#comment(style="height:auto")
+                h3(style="font-weight:bold") 想跟我說什麼？
+              textarea#comment(placeholder="Comment" style="height:auto")
             .ui.buttons
               .ui.button Cancel
               .or
