--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -28,13 +28,14 @@ html
   min-width 836px
   position absolute
   display inline
+  margin-top 5px
   
 #logo
   display inline
 
 #logo img
   height auto
-  width 15rem
+  width 13rem
   box-shadow 0px 0px
 
 #menu .right.menu
@@ -108,7 +109,6 @@ html
     letter-spacing 1rem
     text-indent 1rem
     font-size 1.3rem
-    font-weight bolder
 
 #row-1 .column.two.wide
   padding 1px 1px 0px 1px
@@ -128,7 +128,6 @@ html
     letter-spacing 1rem
     text-indent 1rem
     font-size 1.3rem
-    font-weight bolder
 
 #row-3 .column.two.wide
   padding 0px 1px 1px 1px
@@ -277,17 +276,23 @@ img
 #contact
   width 90vw
   margin 0 auto
+  margin-top 10vh
   .message
-    background-color #C30D23
+    background-color #931B32 
     #header
       text-align center
       h2, p
         color #FFF
       h2
         padding-bottom 5px
+  #submit
+    text-align center
 
 p#contact-sub
   margin-top 0
+
+#reply
+  background-color #F8B62D!important
 
 label h3 
   font-size 1.5em
