--- a/app/index.jade
+++ b/app/index.jade
@@ -186,12 +186,6 @@ html(lang="zh-tw")
         //-        img.ui.image(src="/res/images/profile/2.jpg")
 
       .container#page_3
-        br 
-        br
-        br
-        br
-        br
-        br
         #contact
           .ui.attached.message
             #header
@@ -199,26 +193,27 @@ html(lang="zh-tw")
               p#contact-sub 任何有需要改進的地方，或是任何意見，都歡迎告知我們 =]
           form.ui.form.attached.fluid.segment
             .two.fields
-              .ui.field.large.input
+              .ui.field.input
                 label 
                   h3(style="font-weight:bold") 姓名
                 input#name(placeholder="Name" type="text")
-              .ui.field.large.input
+              .ui.field.input
                 label 
                   h3(style="font-weight:bold") 系級 
                 input#department(placeholder="Department" type="text")
-            .ui.field.large.input
+            .ui.field.input
               label 
                 h3(style="font-weight:bold") 電子信箱
               input#email(placeholder="E-mail address" type="text")
-            .ui.field.large.input
+            .ui.field.input
               label 
                 h3(style="font-weight:bold") 想跟我說什麼？
               textarea#comment(placeholder="Comment" style="height:auto")
-            .ui.buttons
-              .ui.button Cancel
-              .or
-              .ui.button.positive#reply Reply
+            #submit
+              .ui.buttons
+                .ui.button Cancel
+                .or
+                .ui.button.positive#reply Reply
         br      
 
     //- #mask
