add profile-content remove icon

--- a/app/index.jade
+++ b/app/index.jade
@@ -79,6 +79,7 @@ html(lang="zh-tw")
               .img#profile-0
                 img.ui.image#pic-1(src="/res/images/profile/1.jpg")
             #profile-content.twelve.wide.column
+              i.remove.icon.big
               #experience
               #say
             .twelve.wide.column.ui.vertically.celled.grid
