--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -34,8 +34,8 @@ html
   display inline
 
 #logo img
-  height auto
-  width 13rem
+  height 8vh
+  width auto
   box-shadow 0px 0px
 
 #menu .right.menu
@@ -141,6 +141,15 @@ html
   background-color rgba(255, 255, 255, 0)
   z-index -4
   overflow-y auto
+  .icon.remove
+    visibility hidden
+    position absolute
+    right 0px
+    margin 1%
+    cursor pointer
+    transition .2s ease-in-out
+  .icon.remove:hover
+    transform scale(1.5)
 
 #experience
   flex 5
