done cur-profile cursor

--- a/app/index.jade
+++ b/app/index.jade
@@ -71,7 +71,7 @@ html(lang="zh-tw")
                 .two.wide.column#name-11
                   p
           .row#row-2
-            .four.wide.column#cur-profile
+            .four.wide.column#cur-profile.pointer
               .name
                 | 李念庭
               .office
