--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -17,6 +17,12 @@ html
   max-width 100%
   font-size 2.2vmin
 
+.pointer
+  cursor pointer
+  transition opacity .3s ease-in-out
+.pointer:hover
+  opacity 0.4
+
 #menu
   position fixed
   z-index 99
