filter error comment

--- a/app/index.jade
+++ b/app/index.jade
@@ -212,7 +212,7 @@ html(lang="zh-tw")
               textarea#comment(placeholder="Comment" style="height:auto")
             #submit
               .ui.buttons
-                .ui.button Cancel
+                .ui.button#cancel Cancel
                 .or
                 .ui.button.positive#reply Reply
         br      
