--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -65,6 +65,10 @@ html
   left 200vw
   height auto
 
+#page_4
+  left 300vw
+  height auto
+
 .grid
   height auto
   vertical-align middle
@@ -308,6 +312,21 @@ p#contact-sub
 
 #reply
   background-color #F8B62D!important
+
+#file
+  margin 0 auto
+  margin-top 15vh
+  width 80vw
+  height auto
+  .grid .row:first-child
+    background-color #F0F0F0
+  h2
+    font-size 1.5rem
+  h3
+    line-height 1.5rem
+    font-size 1.3rem
+  .one
+    text-align center
 
 label h3 
   font-size 1.5em
