--- a/app/index.jade
+++ b/app/index.jade
@@ -27,6 +27,9 @@ html(lang="zh-tw")
         a.item#icon_3
           i.mail.icon.large
           | Contact us
+        a.item#icon_4
+          i.file.text.icon.large
+          | Download
         .right.menu
           a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
             i.github.alternate.icon.large.link
@@ -217,55 +220,20 @@ html(lang="zh-tw")
                 .ui.button.positive#reply Reply
         br      
 
+      .container#page_4
+        #file
+          .ui.internally.celled.grid
+            .row
+              .thirteen.wide.column
+                h2 Name
+              .two.wide.column
+                h2 Date
+              .one.wide.column
+
+        br
+
     //- #mask
 
-    //-  
-        .ss-row
-          .ss-left
-            h2#november November
-          .ss-right
-            h2 2011
-
-        .ss-row.ss-medium
-          .ss-left
-            a.ss-circle.ss-circle-1 Typography Effects with CSS3 and jQuery
-          .ss-right
-            h3
-              span November 28, 2011
-              a Typography Effects with CSS3 and jQuery
-
-        .ss-row.ss-large
-          .ss-left
-            h3
-              span November 22, 2011
-              a Hover and Click Trigger for Circular Elements with jQuery
-          .ss-right
-            a.ss-circle.ss-circle-2 Hover and Click Trigger for Circular Elements with jQuery
- 
-        .ss-row.ss-large
-          .ss-left
-            h3
-              span November 22, 2011
-              a Hover and Click Trigger for Circular Elements with jQuery
-          .ss-right
-            a.ss-circle.ss-circle-2 Hover and Click Trigger for Circular Elements with jQuery
-      
-        .ss-row.ss-large
-          .ss-left
-            h3
-              span November 22, 2011
-              a Hover and Click Trigger for Circular Elements with jQuery
-          .ss-right
-            a.ss-circle.ss-circle-2 Hover and Click Trigger for Circular Elements with jQuery
- 
-        .ss-row.ss-large
-          .ss-left
-            h3
-              span November 22, 2011
-              a 我好正 <3我好正 <3我好正 <3我好正 <3TTT
-          .ss-right
-            a.ss-circle.ss-circle-2 Hover and Click Trigger for Circular Elements with jQuery
-   
     script(type="text/javascript", src="app.js")
       
 //- vi:et:nowrap:sw=2:ts=2
