--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,9 +1,9 @@
 h2{
-    padding: 0px 10px 10px;
+    /*padding: 0px 10px 10px;*/
     font-size: 40px;
-    font-weight: bold;
+    /*font-weight: bold;*/
     text-transform: uppercase;
-    color: rgba(0,0,0,0.8);
+    /*color: rgba(0,0,0,0.8);*/
 	position: relative;
 	/*text-shadow: 0px 0px 3px rgba(0,0,0,0.2);*/
 }
