finish download icon

--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -327,6 +327,10 @@ p#contact-sub
     font-size 1.3rem
   .one
     text-align center
+    a
+      color rgba(248,182,45,1)
+    a:hover
+      color rgba(195,13,35,1)
 
 label h3 
   font-size 1.5em
