--- a/app/index.jade
+++ b/app/index.jade
@@ -1,11 +1,11 @@
 doctype html
 html(lang="zh-tw")
   head
-    title ncku graduation 104
+    title 成大 104 級 畢聯會官網
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0") 
     meta(name="description", content="1")
-    meta(name="keywords", content=" ")
+    meta(name="keywords", content="NCKU 成大 104 畢聯會 畢業 畢業典禮")
     meta(name="author", content="Mouther")
     link(rel="shortcut icon", href="/res/images/favicon.png") 
     link(rel="stylesheet", type="text/css", href="app.css")
