--- a/app/index.jade
+++ b/app/index.jade
@@ -4,7 +4,7 @@ html(lang="zh-tw")
     title 成大 104 級 畢聯會官網
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0") 
-    meta(name="description", content="1")
+    meta(name="description", content="國立成功大學 104 級 畢業聯合會 官方網站")
     meta(name="keywords", content="NCKU 成大 104 畢聯會 畢業 畢業典禮")
     meta(name="author", content="Mouther")
     link(rel="shortcut icon", href="/res/images/favicon.png") 
@@ -19,22 +19,22 @@ html(lang="zh-tw")
         img(src="/res/images/LOGO-top.png")
       .ui.secondary.pointing.menu
         a.active.red.item#icon_1
-          i.home.icon.large
+          i.home.icon
           | Home
         a.item#icon_2
-          i.users.icon.large
+          i.users.icon
           | Members
         a.item#icon_3
-          i.mail.icon.large
+          i.mail.icon
           | Contact us
         a.item#icon_4
-          i.file.text.icon.large
+          i.file.text.icon
           | Download
         .right.menu
-          a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
-            i.github.alternate.icon.large.link
+          //- a.item#github(href="https://github.com/Mouther/NCKU-graduation104" target="_blank")
+          //-   i.github.alternate.icon.large.link
           a.item#fb(href="https://www.facebook.com/ncku.graduation" target="_blank")
-            i.facebook.icon.large.link.blue
+            i.facebook.icon.link.blue
  
     #book
       .container#page_1
@@ -44,14 +44,14 @@ html(lang="zh-tw")
         br
         br
         // h1 NCKU graduation
-        // h2.ss-subtitle Programmmmmmmmmmmmmmmmmmmmmmm
-        #ss-links.ss-links
-          a(href="#november") Nov
-          a(href="#october") Oct
-          a(href="#september") Sep
-          a(href="#august") Aug
-          a(href="#july") Jul
-          a(href="#june") Jun
+        // h2.ss-subtitle Program
+        // #ss-links.ss-links
+        //   a(href="#november") Nov
+        //   a(href="#october") Oct
+        //   a(href="#september") Sep
+        //   a(href="#august") Aug
+        //   a(href="#july") Jul
+        //   a(href="#june") Jun
   
         #ss-container.ss-container
       .container#page_2
