--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -28,6 +28,8 @@ html
   z-index 99
   width 100vw
   background-color rgba(255, 255, 255, 0.6)
+  a.item
+    font-size 18px
 
 #menu .ui.secondary.pointing.menu
   width 100%
@@ -40,7 +42,7 @@ html
   display inline
 
 #logo img
-  height 8vh
+  height 55px
   width auto
   box-shadow 0px 0px
 
@@ -208,7 +210,10 @@ html
     font-size 3rem
     letter-spacing 0.5rem
     color #FFF
+    writing-mode vertical-lr
+    -moz-writing-mode vertical-lr
     -webkit-writing-mode vertical-lr
+    -ms-writing-mode lr-tb
   .office
     position absolute
     z-index 2
@@ -218,7 +223,10 @@ html
     font-size 2rem
     letter-spacing 0.5rem
     color #FFF
+    writing-mode vertical-lr
+    -moz-writing-mode vertical-lr
     -webkit-writing-mode vertical-lr
+    -ms-writing-mode lr-tb
 
 #sideinfo
   position absolute
