--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -15,7 +15,7 @@ input, textarea
 html
   overflow-x hidden
   max-width 100%
-  font-size 2.2vmin
+  font-size 16px
 
 .pointer
   cursor pointer
@@ -29,7 +29,7 @@ html
   width 100vw
   background-color rgba(255, 255, 255, 0.6)
   a.item
-    font-size 18px
+    font-size 17px
 
 #menu .ui.secondary.pointing.menu
   width 100%
@@ -47,7 +47,7 @@ html
   box-shadow 0px 0px
 
 #menu .right.menu
-  margin-right 17rem
+  margin-right 220px
 
 #book
   position relative
@@ -323,16 +323,17 @@ p#contact-sub
 
 #file
   margin 0 auto
-  margin-top 15vh
+  margin-top 10vh
   width 80vw
   height auto
   .grid .row:first-child
     background-color #F0F0F0
   h2
-    font-size 1.5rem
+    font-size 1rem
   h3
-    line-height 1.5rem
-    font-size 1.3rem
+    font-family "微軟正黑體"
+    line-height 1rem
+    font-size 1rem
   .one
     text-align center
     a
