--- a/app/css/app.styl
+++ b/app/css/app.styl
@@ -23,6 +23,8 @@ html
     font-family "微軟正黑體"
   a:link
     color blue
+    span
+      color blue
   overflow auto
   line-height 1.5rem
   padding 3% 5% 0 5%
