--- a/app/index.jade
+++ b/app/index.jade
@@ -5,7 +5,7 @@ html(lang="zh-tw")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0") 
     meta(name="description", content="國立成功大學 104 級 畢業聯合會 官方網站")
-    meta(name="keywords", content="NCKU 成大 104 畢聯會 畢業 畢業典禮")
+    meta(name="keywords", content="NCKU, 成大, 成功大學, 國立成功大學, 應屆, 畢業生, 畢業生聯合會, 應屆畢業生聯合會, 104, 畢聯會, 畢業, 畢業典禮")
     meta(name="author", content="Mouther")
     link(rel="shortcut icon", href="/res/images/favicon.png") 
     link(rel="stylesheet", type="text/css", href="app.css")
@@ -43,15 +43,15 @@ html(lang="zh-tw")
         br
         br
         br
-        // h1 NCKU graduation
-        // h2.ss-subtitle Program
-        // #ss-links.ss-links
-        //   a(href="#november") Nov
-        //   a(href="#october") Oct
-        //   a(href="#september") Sep
-        //   a(href="#august") Aug
-        //   a(href="#july") Jul
-        //   a(href="#june") Jun
+        //- h1 NCKU graduation
+        //- h2.ss-subtitle Program
+        //- #ss-links.ss-links
+        //-   a(href="#november") Nov
+        //-   a(href="#october") Oct
+        //-   a(href="#september") Sep
+        //-   a(href="#august") Aug
+        //-   a(href="#july") Jul
+        //-   a(href="#june") Jun
   
         #ss-container.ss-container
       .container#page_2
