--- a/app/index.jade
+++ b/app/index.jade
@@ -45,13 +45,13 @@ html(lang="zh-tw")
         br
         //- h1 NCKU graduation
         //- h2.ss-subtitle Program
-        //- #ss-links.ss-links
-        //-   a(href="#november") Nov
-        //-   a(href="#october") Oct
-        //-   a(href="#september") Sep
-        //-   a(href="#august") Aug
-        //-   a(href="#july") Jul
-        //-   a(href="#june") Jun
+        #ss-links.ss-links
+          a(href="#november") Nov
+          a(href="#october") Oct
+          a(href="#september") Sep
+          a(href="#august") Aug
+          a(href="#july") Jul
+          a(href="#june") Jun
   
         #ss-container.ss-container
       .container#page_2
