finish month circle but background color not sure

--- a/app/index.jade
+++ b/app/index.jade
@@ -45,7 +45,7 @@ html(lang="zh-tw")
         br
         //- h1 NCKU graduation
         //- h2.ss-subtitle Program
-        // #ss-links.ss-links
+        #ss-links.ss-links
         //   a(href="#november") Nov
         //   a(href="#october") Oct
         //   a(href="#september") Sep
