--- a/app/css/style.css
+++ b/app/css/style.css
@@ -20,7 +20,8 @@ h2.ss-subtitle{
 	z-index: 100;
 }
 .ss-links a{
-	background: rgba(248,182,45,0.6);
+	background: rgba(147,27,50,0.6);
+  color: #FFF;
 	font-size: 16px;
 	width: 40px;
 	height: 40px;
