--- a/app/songs/happy/1.jade
+++ b/app/songs/happy/1.jade
@@ -1,35 +1,43 @@
 doctype html
 
+- var song = "<iframe width='60%' height='120' scrolling='no' frameborder='no' src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/195799849%3Fsecret_token%3Ds-bOuQ4&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true'></iframe>"
+
 body
-  h1(style="text-align : center") 歡樂組＃1 - 
+  h1(style="text-align : center") 歡樂組＃1 - 就讓
   #author(style="text-align : center")
+    p %  所有歌曲版權屬創作學生與畢聯會所有，請勿轉作任何商業用途及散播  %
     p 詞：巫孟儒
     p 曲：巫孟儒
     p 主唱：巫孟儒
     p 吉他：巫孟儒
     p 錄音：呂尚霖
+  
+  br
+  #song(style="text-align : center")
+    !{song}
 
+  br
   #lyric(style="margin : 0 auto; width : 60vw")
     p 在 那天的午後 
     p 我們 說了再見 之後該往哪走
     p 你總說 那些畫面 失去以後 未必不能再擁有
-
+    br
     p 也許你 有一天會懂 書本裡的艱澀難題總有結果
     p 儘管緣分永遠不能重播 就讓我們揮揮手 
-
+    br
     p 操場上 夕陽下 回憶裡 留下的感動 都是我 們今生 永不會 忘記的夢
-
+    br
     p 就讓我們迎著 風 飛向前 
     p 別讓青春停在這瞬間 
     p 我 還記得那 天 我們一起寫下 的那一篇
     p 今天過後 我們 不再追悔 
     p 那些抓不住的昨天 不管是笑著還哭著 我 都能回味
-
+    br
     p 也許你 有一天會懂 書本裡的艱澀難題總有結果
     p 儘管緣分永遠不能重播 就讓我們揮揮手 
-
+    br
     p 會是誰 出現在 下一個 相遇的路口 又讓我 想起了 曾經被 放棄的夢
-
+    br
     p 就讓我們迎著 風 飛向前 
     p 別讓青春停在這瞬間 
     p 我 還記得那 天 我們一起寫下 的那一篇
