add embeded video

--- a/app/songs/happy/2.jade
+++ b/app/songs/happy/2.jade
@@ -1,6 +1,6 @@
 doctype html
 
-- var song = ""
+- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/yl10y3lk2Rs" frameborder="0" allowfullscreen></iframe>'
 
 body
   h1(style="text-align : center") 歡樂組＃2 - 此刻
