--- a/app/songs/lyric/4.jade
+++ b/app/songs/lyric/4.jade
@@ -1,6 +1,6 @@
 doctype html
 
-- var song = ""
+- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/CNXMzGPITFU" frameborder="0" allowfullscreen></iframe>'
 
 body
   h1(style="text-align : center") 抒情組＃4 - 乎咱青春
