--- a/app/songs/happy/1.jade
+++ b/app/songs/happy/1.jade
@@ -1,6 +1,6 @@
 doctype html
 
-- var song = "<iframe width='60%' height='120' scrolling='no' frameborder='no' src='https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/195799849%3Fsecret_token%3Ds-bOuQ4&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true'></iframe>"
+- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/ZeU65al5Q_o" frameborder="0" allowfullscreen></iframe>'
 
 body
   h1(style="text-align : center") 歡樂組＃1 - 就讓
