--- a/app/songs/happy/3.jade
+++ b/app/songs/happy/3.jade
@@ -1,6 +1,6 @@
 doctype html
 
-- var song = ""
+- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/E8sW1pPbb-U" frameborder="0" allowfullscreen></iframe>' 
 
 body
   h1(style="text-align : center") 歡樂組＃3 - 畢業快樂
