--- a/app/songs/lyric/3.jade
+++ b/app/songs/lyric/3.jade
@@ -1,6 +1,6 @@
 doctype html
 
-- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/yLHrknyXOjI" frameborder="0" allowfullscreen></iframe>'
+- var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/Gbwene_VIFA" frameborder="0" allowfullscreen></iframe>'
 
 body
   h1(style="text-align : center") 抒情組＃3 - 時光森林
