remove lyric #4 color

--- a/app/songs/lyric/4.jade
+++ b/app/songs/lyric/4.jade
@@ -20,31 +20,15 @@ body
 
   br
   #lyric(style="margin : 0 auto; width : 60vw")
-    p
-      a(style="color : #930000") 還
-      a 記得 四年前的那一天
-    p 
-      a(style="color : #930000") 我
-      a 尬你係頭一次見面
-    p 
-      a(style="color : #930000") 南
-      a 部的天氣 係那麼的溫暖尬熱情
-    p 
-      a(style="color : #930000") 榕
-      a 樹下的咱 猶原是青澀的面容
+    p 還記得 四年前的那一天
+    p 我尬你係頭一次見面
+    p 南部的天氣 係那麼的溫暖尬熱情
+    p 榕樹下的咱 猶原是青澀的面容
     br
-    p 
-      a(style="color : #930000") 時
-      a 間啊 飛啊飛 抓不緊
-    p 
-      a(style="color : #930000") 後
-      a 一次咱見面 不知係何時
-    p 
-      a(style="color : #930000") 到
-      a 那個時存 甘矮當擱存今嘛安
-    p 
-      a(style="color : #930000") 了
-      a 解當初的笑容係無變掛
+    p 時間啊 飛啊飛 抓不緊
+    p 後一次咱見面 不知係何時
+    p 到那個時存 甘矮當擱存今嘛安
+    p 了解當初的笑容係無變掛
     br
     p 青春的歌 就讓咱作伙來寫 (寫一首歌)
     p 一首咱在成大回憶的歌
