--- a/app/songs/happy/3.jade
+++ b/app/songs/happy/3.jade
@@ -1,6 +1,7 @@
 doctype html
 
 - var song = '<iframe width="560" height="315" src="https://www.youtube.com/embed/E8sW1pPbb-U" frameborder="0" allowfullscreen></iframe>' 
+- var demo = '<iframe width="60%" height="150" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/195799828%3Fsecret_token%3Ds-D1aLk&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>'
 
 body
   h1(style="text-align : center") 歡樂組＃3 - 畢業快樂
@@ -15,6 +16,11 @@ body
  
   br
   #song(style="text-align : center")
+    h2 DEMO
+    !{demo}
+    br
+    br
+    h2 LIVE
     !{song}
 
   br
