--- a/app/songs/result.jade
+++ b/app/songs/result.jade
@@ -17,11 +17,10 @@ html(lang="zh-tw")
       }
   body
     h1(style="text-align:center;margin-top:2%") 成大104級畢業歌曲 徵選結果
-    h4(style="text-align:center")
+    h3(style="text-align:center")
       a(href="/res/files/評審分數.pdf", target="_blank") 評審分數表
-    h4(style="text-align:center")
-      a(href="/res/files/抒情組開票.pdf", target="_blank") 抒情組投票結果
-    h4(style="text-align:center")
+    h3(style="text-align:center")
+      a(href="/res/files/抒情組開票.pdf", target="_blank", style="margin-right:5%") 抒情組投票結果
       a(href="/res/files/歡樂組開票.pdf", target="_blank") 歡樂組投票結果
     table.ui.celled.table(style="position:relative;margin:0 auto;width:90vw")
       thead
@@ -34,32 +33,36 @@ html(lang="zh-tw")
           th 最終分數
       tbody
         tr
-          td 巢
+          td 
+            a(href="/songs/lyric/1.html", target="_blank") 巢
           td 115
           td.check 38.33
           td 4.48%
-          td.check 4.48
+          td.check 2.24
           td.fianl 40.58
         tr
-          td 綻放之後
+          td
+            a(href="/songs/lyric/2.html", target="_blank") 綻放之後
           td 128.13
           td.check 42.71
           td 11.11%
-          td.check 11.11
-          td.fianl 48.26
+          td.check 5.56
+          td.fianl 48.27
         tr
-          td 時光森林
+          td
+            a(href="/songs/lyric/3.html", target="_blank") 時光森林
           td 116.25
           td.check 38.75
           td 15.59%
-          td.check 15.59
+          td.check 7.80
           td.fianl 46.55
         tr
-          td 乎咱青春
+          td
+            a(href="/songs/lyric/4.html", target="_blank") 乎咱青春
           td 139.38
           td.check 46.46
           td 68.81%
-          td.check 68.81
+          td.check 34.40
           td.win 80.86
 
     table.ui.celled.table(style="position:relative;top:5%;margin:0 auto;width:90vw")
@@ -73,24 +76,30 @@ html(lang="zh-tw")
           th 最終分數
       tbody
         tr
-          td 就讓
+          td
+            a(href="/songs/happy/1.html", target="_blank") 就讓
           td 123.75
           td.check 41.25
           td 43.16%
-          td.check 43.16
+          td.check 21.58
           td.win 62.83
         tr
-          td 此刻
+          td 
+            a(href="/songs/happy/2.html", target="_blank") 此刻
           td 118.13
           td.check 39.38
           td 18.65%
-          td.check 18.65
-          td.fianl 48.70
+          td.check 9.33
+          td.fianl 48.71
         tr
-          td 畢業快樂
+          td
+            a(href="/songs/happy/3.html", target="_blank") 畢業快樂
           td 124.38
           td.check 41.46
           td 38.19%
-          td.check 38.19
+          td.check 19.09
           td.fianl 60.55
+
+    h4(style="position:relative;margin-top:3%;text-align:center") * 以上分數皆以四捨五入計算
+    h4(style="position:relative;text-align:center") * 點擊曲名聆聽
 
