--- a/app/songs/result.jade
+++ b/app/songs/result.jade
@@ -101,5 +101,5 @@ html(lang="zh-tw")
           td.fianl 60.55
 
     h4(style="position:relative;margin-top:3%;text-align:center") * 以上分數皆以四捨五入計算
-    h4(style="position:relative;text-align:center") * 點擊曲名聆聽
+    h4(style="position:relative;margin-top:0% !important;text-align:center") * 點擊曲名聆聽
 
