--- a/app/songs/result.jade
+++ b/app/songs/result.jade
@@ -4,7 +4,7 @@ html(lang="zh-tw")
   head
     title 畢業歌曲徵選結果
     meta(charset="utf-8")
-    link(rel="stylesheet", type="text/css", href="http://semantic-ui.com/dist/semantic.min.css")
+    link(rel="stylesheet", type="text/css", href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/1.11.6/semantic.min.css")
     style.
       .check{
         background-color: #ffecd6
